--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,8 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   cached_network_image: ^3.3.1
-  jitsi_meet_flutter_sdk:
-    git: https://github.com/kocallphoneng/jitsi-meet-flutter-sdk.git
+#  jitsi_meet_flutter_sdk:
+#    git: https://github.com/kocallphoneng/jitsi-meet-flutter-sdk.git
   #  flutter_sticky_header: ^0.6.5
   #  connectivity_plus: ^6.0.2
   timeago: ^3.6.1
