--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,10 +83,8 @@ flutter {
 }
 
 dependencies {
-    implementation fileTree(dir: '../libs', include: ['*.jar'])
-    api files('../libs/NeptuneLiteApi_V4.05.00_20240305.jar')
-    api files('../libs/MP35P_V2_20220606.jar')
-    api files('../libs/horizonpay_smartpossdk_V1.6.210315.jar')
+    implementation fileTree(dir: '../libs', include: ['*.jar', '*.aar'])
+    api files('../libs/tysmartposlib_V2.00.96.R7534_20240418142205_release.aar')
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
     implementation 'androidx.core:core:1.12.0'
     implementation("com.squareup.okhttp3:okhttp:4.12.0")
