--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,10 +85,10 @@ flutter {
 dependencies {
     implementation fileTree(dir: '../libs', include: ['*.jar'])
     api files('../libs/bw_pos_sdk_20240228.jar')
+    compileOnly files('../libs/external/classes.jar')
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
     implementation 'androidx.core:core:1.12.0'
     implementation("com.squareup.okhttp3:okhttp:4.12.0")
     implementation "com.google.code.gson:gson:2.10.1"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1")
-
 }
