--- a/android/local.properties
+++ b/android/local.properties
@@ -3,6 +3,6 @@ flutter.sdk=/Users/kennethosekhuemen/Development/flutter
 flutter.compileSdkVersion=34
 flutter.minSdkVersion=21
 flutter.targetSdkVersion=34
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=1.0.4
 flutter.versionCode=5
