--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         <service
             android:name=".BackgroundService"
             android:foregroundServiceType="location|dataSync|mediaPlayback" />
+        <service
+            android:name="org.eclipse.paho.android.service.MqttService"
+            android:exported="false" />
         <receiver
             android:name=".BroadcastListener"
             android:enabled="true"
