--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,6 +76,18 @@ android {
             signingConfig signingConfigs.release
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/INDEX.LIST'
+        exclude 'META-INF/io.netty.versions.properties'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+    }
 }
 
 flutter {
@@ -90,6 +102,7 @@ dependencies {
     implementation "com.google.code.gson:gson:2.10.1"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1")
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
+    implementation("io.netty:netty-all:4.1.112.Final")
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
     implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
 }
