--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,6 +76,17 @@ android {
             signingConfig signingConfigs.release
         }
     }
+    packagingOptions {
+        exclude 'META-INF/INDEX.LIST'
+        exclude 'META-INF/io.netty.versions.properties'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+    }
 }
 
 flutter {
@@ -90,5 +101,5 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.12.0")
     implementation "com.google.code.gson:gson:2.10.1"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1")
-
+    implementation("io.netty:netty-all:4.1.112.Final")
 }
