--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,13 +21,19 @@
         android:label="ITEX Store"
         android:installLocation="internalOnly"
         android:networkSecurityConfig="@xml/network_security_config">
+<!--        <service-->
+<!--            android:name=".BackgroundService"-->
+<!--            android:enabled="true"-->
+<!--            android:exported="true">-->
+<!--        </service>-->
         <service
             android:name=".BackgroundService"
             android:enabled="true"
             android:exported="true">
+            <intent-filter>
+                <action android:name="KEEP_ALIVE_ACTION_NAME" />
+            </intent-filter>
         </service>
-
-
         <receiver
             android:name=".BroadcastListener"
             android:enabled="true"
