--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,7 +23,12 @@
         android:icon="@mipmap/ic_launcher">
         <service
             android:name=".BackgroundService"
-            android:foregroundServiceType="location|dataSync|mediaPlayback" />
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="KEEP_ALIVE_ACTION_NAME" />
+            </intent-filter>
+        </service>
         <receiver
             android:name=".BroadcastListener"
             android:enabled="true"
