--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,5 +102,8 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.12.0")
     implementation "com.google.code.gson:gson:2.10.1"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1")
-    implementation("io.netty:netty-all:4.1.112.Final")
+    implementation("io.netty:netty-all:4.1.112.Final"){
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-core'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-api'
+    }
 }
