--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -97,6 +97,7 @@ flutter {
 dependencies {
     implementation fileTree(dir: '../libs', include: ['*.jar'])
     api files('../libs/ysdk_5.86.bd94116_24042809.jar')
+    api files('../libs/bcprov-jdk15on-160.jar')
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
     implementation 'androidx.core:core:1.12.0'
     implementation("com.squareup.okhttp3:okhttp:4.12.0")
