--- a/android/local.properties
+++ b/android/local.properties
@@ -1,8 +1,8 @@
-sdk.dir=/Users/mac/Library/Android/sdk
-flutter.sdk=/Users/mac/development/flutter
+sdk.dir=/Users/kennethosekhuemen/Library/Android/sdk
+flutter.sdk=/Users/kennethosekhuemen/Development/flutter
 flutter.compileSdkVersion=34
 flutter.minSdkVersion=21
 flutter.targetSdkVersion=34
-flutter.buildMode=debug
-flutter.versionName=1.1.0
-flutter.versionCode=11
+flutter.buildMode=release
+flutter.versionName=1.1.1
+flutter.versionCode=12
