--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,7 +102,8 @@ dependencies {
     implementation "com.google.code.gson:gson:2.10.1"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1")
 //    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
-    implementation("io.netty:netty-all:4.1.112.Final")
+//    implementation("io.netty:netty-all:4.1.112.Final")
+    implementation("org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5")
 //    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
 //    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
 }
