--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -105,5 +105,5 @@ dependencies {
 //    implementation("io.netty:netty-all:4.1.112.Final")
     implementation("org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5")
 //    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
-//    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
 }
